[gd_scene load_steps=6 format=3 uid="uid://dp5krt0wujruy"]

[ext_resource type="PackedScene" uid="uid://04xwpohl7abm" path="res://scenes/player.tscn" id="1_8xyob"]
[ext_resource type="Script" path="res://scripts/level1.gd" id="1_gpbfq"]
[ext_resource type="PackedScene" uid="uid://e8kpp0vqpfnb" path="res://scenes/weapon_1.tscn" id="3_levfo"]
[ext_resource type="PackedScene" uid="uid://ciswsg5ui4qbc" path="res://scenes/moon1.tscn" id="3_mxunh"]
[ext_resource type="AudioStream" uid="uid://bi02byuvdsn4j" path="res://res/sounds/select.mp3" id="5_gx4un"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gpbfq")

[node name="player" parent="." instance=ExtResource("1_8xyob")]
z_index = 1
scale = Vector2(3, 3)

[node name="weapon1" parent="player" instance=ExtResource("3_levfo")]

[node name="moon1" parent="." instance=ExtResource("3_mxunh")]
position = Vector2(912, 74)

[node name="moon2" parent="." instance=ExtResource("3_mxunh")]
position = Vector2(-437, -388)

[node name="moon3" parent="." instance=ExtResource("3_mxunh")]
position = Vector2(-687, 613)

[node name="bullets" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gx4un")
volume_db = -7.0
pitch_scale = 1.3
autoplay = true
bus = &"Select"
